pie chart dropdown overlap fix

--- a/src/pages/Main/styles.scss
+++ b/src/pages/Main/styles.scss
@@ -83,6 +83,7 @@
       }
 
       .duration-dropdown {
+        z-index: 50;
         padding: 7px 8px;
         position: absolute;
         width: 100px;
